--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	implementation 'org.hibernate:hibernate-spatial:6.6.1.Final'
 	// === spring docs 의존성 추가 ===
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+// === spring security 의존성 추가 ===
+	implementation "org.springframework.boot:spring-boot-starter-security"
 }
 
 tasks.named('test') {
