--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 	// === XML 파싱 관련 의존성 추가 ===
 	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
 	implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
+	// === 몽고DB 관련 의존성 추가 ===
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 }
 
 tasks.named('test') {
