--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 	// === spring security 의존성 추가 ===
 	implementation "org.springframework.boot:spring-boot-starter-security"
+	// === spring security oauth2 의존성 추가===
+	implementation 'org.springframework.security:spring-security-oauth2-resource-server'
 	// === JWT 토큰 의존성 추가 ===
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
