[FEAT] 테스트 전용 임베디드 레디스 추가

--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     // === Redis 의존성 추가 ===
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    // === Redis Test 의존성 추가 ===
+    testImplementation 'it.ozimov:embedded-redis:0.7.2'
 }
 
 tasks.named('test') {
