--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -31,6 +31,23 @@ spring:
       cron: 0 0 11 * * *
 
   security:
+    oauth2:
+      client:
+        registration:
+          naver:
+            client-name: naver
+            client-id: it-is-not-real-client-id
+            client-secret: it-is-not-real-client-secret
+            redirect-uri: it-is-not-real-redirect-uri
+            authorization-grant-type: authorization_code
+            scope:
+              - name
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
     jwt-key: testessztest123dsaqwgqtestestwqw
 
   aws:
