--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -49,6 +49,9 @@ spring:
             user-info-uri: https://openapi.naver.com/v1/nid/me
             user-name-attribute: response
     jwt-key: testessztest123dsaqwgqtestestwqw
+    expiration:
+      access-token: 30 # 분단위
+      refresh-token: 30 # 분단위
 
   aws:
     s3:
