--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -12,6 +12,8 @@ spring:
     hibernate:
       ddl-auto: create
     open-in-view: false
+  flyway:
+    enabled: false
   data:
     mongodb:
       host: localhost
