--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,63 +5,35 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test:
+  detect-changes:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      checks: write
-      pull-requests: write
-
+    outputs:
+      gateway: ${{ steps.filter.outputs.gateway }}
+      mono: ${{ steps.filter.outputs.mono }}
+      common: ${{ steps.filter.outputs.common }}
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+
+      - name: Detect changed modules
+        uses: dorny/paths-filter@v3
+        id: filter
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          filters: |
+            gateway:
+              - 'gateway/**'
+            mono:
+              - 'mono/**'
+            common:
+              - 'settings.gradle'
+              - 'gradle/**'
+              - '.github/workflows/**'
 
-      - name: Gradle Caching
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+  test-gateway:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.gateway == 'true' || needs.detect-changes.outputs.common == 'true'
+    uses: ./.github/workflows/test-gateway.yml
 
-      - name: Start mongodb
-        run: |
-          docker run --name mongodb-test -d -p 27017:27017 mongo
-
-          echo "Waiting for MongoDB to be ready..."
-          for i in {1..10}; do
-            if docker exec mongodb-test mongosh --eval "db.adminCommand('ping')" > /dev/null 2>&1; then
-              echo "MongoDB is ready!"
-              break
-            fi
-            echo "MongoDB not ready yet... retrying ($i)"
-            sleep 5
-          done
-
-          echo 'mongosh catsnap_test' > init.js
-          docker exec -i mongodb-test bash < init.js
-
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Build with Gradle Wrapper
-        run: ./gradlew --info test
-
-      - name: Publish test results
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always()
-        with:
-          files: '**/build/test-results/test/TEST-*.xml'
-
-      - name: Publish test report
-        uses: mikepenz/action-junit-report@v4
-        if: always()
-        with:
-          report_paths: '**/build/test-results/test/TEST-*.xml'
+  test-mono:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.mono == 'true' || needs.detect-changes.outputs.common == 'true'
+    uses: ./.github/workflows/test-mono.yml
