--- a/.github/workflows/test-mono.yml
+++ b/.github/workflows/test-mono.yml
@@ -62,3 +62,11 @@ jobs:
         with:
           report_paths: 'mono/build/test-results/test/TEST-*.xml'
           check_name: Test Report (mono)
+
+      - name: Upload coverage reports to Codecov for mono
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: mono/build/reports/jacoco/test/jacocoTestReport.xml
+          flags: mono
+          name: mono-coverage
