[FEAT] 깃허브 액션 secret 하위 yml에 전달 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
       contents: read
       checks: write
       pull-requests: write
+    secrets: inherit
     uses: ./.github/workflows/test-gateway.yml
 
   test-mono:
@@ -44,4 +45,5 @@ jobs:
       contents: read
       checks: write
       pull-requests: write
+    secrets: inherit
     uses: ./.github/workflows/test-mono.yml
