--- a/authorization/build.gradle
+++ b/authorization/build.gradle
@@ -40,9 +40,18 @@ jacocoTestReport {
 }
 
 dependencies {
+    // === Spring Boot 기본 의존성 ===
     implementation 'org.springframework.boot:spring-boot-starter'
+    // === Spring Boot 테스트 의존성 ===
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // === Spring Web 의존성 ===
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    // === Spring Data JPA 의존성 ===
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    // === PostgreSQL 드라이버 ===
+    runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
