[FEAT] 롬복, 암호화 의존성 추가

--- a/authorization/build.gradle
+++ b/authorization/build.gradle
@@ -52,6 +52,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // === PostgreSQL 드라이버 ===
     runtimeOnly 'org.postgresql:postgresql'
+    // === 비밀번호 암호화 의존성 ===
+    implementation 'org.springframework.security:spring-security-crypto'
+    // === 롬복 의존성
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
