--- a/authorization/build.gradle
+++ b/authorization/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // === PostgreSQL 드라이버 ===
     runtimeOnly 'org.postgresql:postgresql'
+    // === H2 데이터베이스 (테스트 전용) ===
+    testRuntimeOnly 'com.h2database:h2'
     // === 비밀번호 암호화 의존성 ===
     implementation 'org.springframework.security:spring-security-crypto'
     // === 롬복 의존성
