--- a/authorization/build.gradle
+++ b/authorization/build.gradle
@@ -48,6 +48,8 @@ dependencies {
 
     // === Spring Web 의존성 ===
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    // === Spring Validation 의존성 ===
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     // === Spring Data JPA 의존성 ===
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // === PostgreSQL 드라이버 ===
