--- a/authorization/Dockerfile
+++ b/authorization/Dockerfile
@@ -1,4 +1,4 @@
-FROM amazoncorretto:17-alpine AS builder
+FROM amazoncorretto:17-amazonlinux AS builder
 
 WORKDIR /app
 
@@ -11,7 +11,7 @@ COPY authorization authorization
 RUN chmod +x gradlew
 RUN ./gradlew :authorization:clean :authorization:build -x test --no-daemon
 
-FROM amazoncorretto:17-alpine
+FROM amazoncorretto:17-amazonlinux
 
 RUN addgroup -S appgroup && adduser -S appuser -G appgroup
 
