--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -4,9 +4,11 @@ WORKDIR /app
 
 COPY gradlew .
 COPY gradle gradle
-COPY settings.gradle .
 COPY auth-shared auth-shared
 COPY gateway gateway
+
+RUN echo "include 'gateway'" > settings.gradle && \
+    echo "include 'auth-shared'" >> settings.gradle
 
 RUN chmod +x gradlew
 RUN ./gradlew :gateway:clean :gateway:build -x test --no-daemon
