--- a/infrastructure/k8s/authorization/service.yaml
+++ b/infrastructure/k8s/authorization/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: catsnap-gateway
+  name: catsnap-authorization
   labels:
-    app: catsnap-gateway
+    app: catsnap-authorization
 spec:
   type: ClusterIP
   selector:
-    app: catsnap-gateway
+    app: catsnap-authorization
   ports:
     - name: http
       protocol: TCP
       port: 80
-      targetPort: 8000
+      targetPort: 8080
