[FEAT] k8s 파드 설정 변경

--- a/infrastructure/k8s/gateway/deployment.yaml
+++ b/infrastructure/k8s/gateway/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: catsnap-gateway
           image: chokyungho/catsnap-gateway:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 8000
