--- a/infrastructure/k8s/authorization/deployment.yaml
+++ b/infrastructure/k8s/authorization/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: catsnap-authorization
           image: chokyungho/catsnap-authentication:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 8080
