[FEAT] authorization -> authentication 패키지로 변경

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       gateway: ${{ steps.filter.outputs.gateway }}
-      authorization: ${{ steps.filter.outputs.authorization }}
+      authentication: ${{ steps.filter.outputs.authentication }}
       auth-shared: ${{ steps.filter.outputs.auth-shared }}
     steps:
       - uses: actions/checkout@v4
@@ -21,8 +21,8 @@ jobs:
           filters: |
             gateway:
               - 'gateway/**'
-            authorization:
-              - 'authorization/**'
+            authentication:
+              - 'authentication/**'
             auth-shared:
               - 'auth-shared/**'
 
@@ -35,11 +35,11 @@ jobs:
     secrets: inherit
     uses: ./.github/workflows/deploy-gateway.yml
 
-  deploy-authorization:
+  deploy-authentication:
     needs: detect-changes
-    if: needs.detect-changes.outputs.authorization == 'true' || needs.detect-changes.outputs.auth-shared == 'true'
+    if: needs.detect-changes.outputs.authentication == 'true' || needs.detect-changes.outputs.auth-shared == 'true'
     permissions:
       contents: read
       packages: write
     secrets: inherit
-    uses: ./.github/workflows/deploy-authorization.yml
+    uses: ./.github/workflows/deploy-authentication.yml
