--- a/authentication/build.gradle
+++ b/authentication/build.gradle
@@ -41,7 +41,7 @@ jacocoTestReport {
 
 dependencies {
     // === 인증 모듈 추가 ===
-    implementation project(':auth-shared')
+    implementation project(':authorization-shared')
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
