--- a/authorization-shared/build.gradle
+++ b/authorization-shared/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 group = 'net.catsnap'
 version = '0.0.1-SNAPSHOT'
-description = 'Catsnap Auth Shared Kernel - Shared authentication and authorization definitions'
+description = 'Catsnap Authorization Shared Kernel - Shared authentication and authorization definitions'
 
 java {
     toolchain {
