--- a/codecov.yml
+++ b/codecov.yml
@@ -40,11 +40,11 @@ flags:
     # Mono 테스트가 실행되지 않으면 이전 커버리지 유지
     carryforward: true
 
-  # Auth-Shared 공유 모듈
-  auth-shared:
+  # Authorization-Shared 공유 모듈
+  authorization-shared:
     paths:
-      - auth-shared/
-    # Auth-Shared 테스트가 실행되지 않으면 이전 커버리지 유지
+      - authorization-shared/
+    # Authorization-Shared 테스트가 실행되지 않으면 이전 커버리지 유지
     carryforward: true
 
 # PR에 달리는 커버리지 코멘트 설정
