--- a/authentication/build.gradle
+++ b/authentication/build.gradle
@@ -61,6 +61,12 @@ dependencies {
     testRuntimeOnly 'com.h2database:h2'
     // === 비밀번호 암호화 의존성 ===
     implementation 'org.springframework.security:spring-security-crypto'
+    // === JWT 의존성 ===
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+    // === Redis 의존성 ===
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     // === 롬복 의존성 ===
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
