--- a/authentication/build.gradle
+++ b/authentication/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
     // === Redis 의존성 ===
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    // === Testcontainers 의존성 ===
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.testcontainers:junit-jupiter'
     // === 롬복 의존성 ===
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
