--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
       mono: ${{ steps.filter.outputs.mono }}
       authentication: ${{ steps.filter.outputs.authentication }}
       authorization-shared: ${{ steps.filter.outputs.authorization-shared }}
+      reservation: ${{ steps.filter.outputs.reservation }}
       common-files: ${{ steps.filter.outputs.common-files }}
     steps:
       - uses: actions/checkout@v4
@@ -29,6 +30,8 @@ jobs:
               - 'authentication/**'
             authorization-shared:
               - 'authorization-shared/**'
+            reservation:
+              - 'reservation/**'
             common-files:
               - 'settings.gradle'
               - 'gradle/**'
@@ -73,3 +76,13 @@ jobs:
       pull-requests: write
     secrets: inherit
     uses: ./.github/workflows/test-authorization-shared.yml
+
+  test-reservation:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.reservation == 'true' || needs.detect-changes.outputs.authorization-shared == 'true' || needs.detect-changes.outputs.common-files == 'true'
+    permissions:
+      contents: read
+      checks: write
+      pull-requests: write
+    secrets: inherit
+    uses: ./.github/workflows/test-reservation.yml
