--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ jobs:
       gateway: ${{ steps.filter.outputs.gateway }}
       authentication: ${{ steps.filter.outputs.authentication }}
       authorization-shared: ${{ steps.filter.outputs.authorization-shared }}
+      reservation: ${{ steps.filter.outputs.reservation }}
     steps:
       - uses: actions/checkout@v4
 
@@ -25,6 +26,8 @@ jobs:
               - 'authentication/**'
             authorization-shared:
               - 'authorization-shared/**'
+            reservation:
+              - 'reservation/**'
 
   deploy-gateway:
     needs: detect-changes
@@ -43,3 +46,12 @@ jobs:
       packages: write
     secrets: inherit
     uses: ./.github/workflows/deploy-authentication.yml
+
+  deploy-reservation:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.reservation == 'true' || needs.detect-changes.outputs.authorization-shared == 'true'
+    permissions:
+      contents: read
+      packages: write
+    secrets: inherit
+    uses: ./.github/workflows/deploy-reservation.yml
