--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    // === Spring Web 의존성 ===
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     // === Spring Data JPA 의존성 ===
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     // === PostgreSQL 드라이버 ===
