--- a/event-schema-shared/build.gradle
+++ b/event-schema-shared/build.gradle
@@ -14,6 +14,9 @@ java {
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://packages.confluent.io/maven/"
+    }
 }
 
 dependencies {
@@ -23,6 +26,10 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Confluent Schema Registry compatibility
+    testImplementation 'io.confluent:kafka-avro-serializer:7.5.1'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
 }
 
 avro {
