--- a/codecov.yml
+++ b/codecov.yml
@@ -47,6 +47,13 @@ flags:
     # Authorization-Shared 테스트가 실행되지 않으면 이전 커버리지 유지
     carryforward: true
 
+  # Event-Schema-Shared 공유 모듈
+  event-schema-shared:
+    paths:
+      - event-schema-shared/
+    # Event-Schema-Shared 테스트가 실행되지 않으면 이전 커버리지 유지
+    carryforward: true
+
 # PR에 달리는 커버리지 코멘트 설정
 comment:
   # 코멘트 레이아웃: 도달률, 차이, flag별 커버리지, 트리 뷰
