--- a/authentication/build.gradle
+++ b/authentication/build.gradle
@@ -42,6 +42,8 @@ jacocoTestReport {
 dependencies {
     // === 인증 모듈 추가 ===
     implementation project(':authorization-shared')
+    // === 이벤트 스키마 모듈 추가 ===
+    implementation project(':event-schema-shared')
     implementation 'org.springframework.boot:spring-boot-starter'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
