[FEAT] avro로 생성된 클래스 사용할 수 있도록 avro 의존성을 api로 제공

--- a/event-schema-shared/build.gradle
+++ b/event-schema-shared/build.gradle
@@ -38,9 +38,10 @@ test {
 }
 
 dependencies {
-    implementation 'org.apache.avro:avro:1.11.4'
+    // Avro 스키마 클래스를 사용하는 모듈에 공개 (공유 계약)
+    api 'org.apache.avro:avro:1.11.4'
 
-    // Confluent Schema Registry compatibility
+    // Confluent Schema Registry는 구현 세부사항으로 숨김
     implementation 'io.confluent:kafka-avro-serializer:8.1.1'
 
     // Test dependencies
