--- a/authentication/Dockerfile
+++ b/authentication/Dockerfile
@@ -1,17 +1,30 @@
 FROM eclipse-temurin:17-jdk AS builder
 
-
 WORKDIR /app
 
+# Gradle wrapper 및 설정 파일 복사
 COPY gradlew .
 COPY gradle gradle
+COPY settings.gradle .
+COPY build.gradle .
+
+# 의존성 다운로드를 위한 빌드 파일 복사 
+COPY authorization-shared/build.gradle authorization-shared/build.gradle
+COPY event-schema-shared/build.gradle event-schema-shared/build.gradle
+COPY authentication/build.gradle authentication/build.gradle
+
+# Gradle wrapper 실행 권한 부여
+RUN chmod +x gradlew
+
+# 의존성 다운로드 
+RUN ./gradlew :authentication:dependencies --no-daemon || true
+
+# 전체 소스 코드 복사
 COPY authorization-shared authorization-shared
+COPY event-schema-shared event-schema-shared
 COPY authentication authentication
 
-RUN echo "include 'authentication'" > settings.gradle && \
-    echo "include 'authorization-shared'" >> settings.gradle
-
-RUN chmod +x gradlew
+# 빌드 실행
 RUN ./gradlew :authentication:clean :authentication:build -x test --no-daemon
 
 
